# groundhog

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RESULTS.md  SECURITY.md  docker-compose.yml  entrypoint.sh  locales.map  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  conformance.yml  publish-image.yml  release.yml
examples/: OTHER_TOOLS.md  README.md
examples/go-chromedp/: README.md  go.mod  main.go
examples/playwright-node/: README.md  index.mjs  package.json
examples/playwright-python/: README.md  main.py  requirements.txt
examples/puppeteer/: README.md  index.mjs  package.json
examples/python-raw-cdp/: README.md  main.py
examples/selenium-python/: README.md  main.py
mcp/: README.md  pyproject.toml
mcp/src/groundhog_mcp/: __main__.py  cdp.py  config.py  detect_js.py  engine.py  extract.py  provenance.py  ratelimit.py  retrieval.py  safety.py  sanitize.py  server.py
mcp/src/groundhog_mcp/tools/: read_url.py  status.py
mcp/tests/: test_config.py  test_engine.py  test_engine_live.py  test_extract.py  test_lifespan.py  test_provenance.py  test_ratelimit.py  test_read_url.py  test_read_url_live.py  test_retrieval.py  test_safety.py  test_sanitize.py  test_status.py
stealth_ext/: manifest.json  stealth.js
tests/: README.md  antibot.py  antibot.test.mjs  package.json
